docs/mechanical/mechanical-scripting-interface/versions/2025.R2.SP00/api/ansys/mechanical/stubs/v251/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/OutcomeType.md
# `OutcomeType`

<a id="ansys.mechanical.stubs.v251.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OutcomeType"></a>

#### *class* Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OutcomeType

Bases: [`enum.Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

This enum is referenced in the “Outcome” tree node and reflects the type of outcome being configured. Based on the type of an outcome different rules are applied which define the applicable list of outcome data to be used.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Attributes

| Name |
| ------------------------------------------------------------------- |
| [`EnclosureExternalScope`](#OutcomeType.EnclosureExternalScope) |
| [`EnclosureInternalScope`](#OutcomeType.EnclosureInternalScope) |
| [`ExtrusionEndScope`](#OutcomeType.ExtrusionEndScope) |
| [`ExtrusionStartScope`](#OutcomeType.ExtrusionStartScope) |
| [`FaceZoneScope`](#OutcomeType.FaceZoneScope) |
| [`FailureInfo`](#OutcomeType.FailureInfo) |
| [`InternalVolumeZoneScope`](#OutcomeType.InternalVolumeZoneScope) |
| [`Scope`](#OutcomeType.Scope) |
| [`SizeFieldName`](#OutcomeType.SizeFieldName) |
| [`VolumeZoneScope`](#OutcomeType.VolumeZoneScope) |

<a id="attribute-detail"></a>

## Attribute detail

<a id="OutcomeType.EnclosureExternalScope"></a>

### OutcomeType.EnclosureExternalScope *= 13*

<a id="OutcomeType.EnclosureInternalScope"></a>

### OutcomeType.EnclosureInternalScope *= 12*

<a id="OutcomeType.ExtrusionEndScope"></a>

### OutcomeType.ExtrusionEndScope *= 15*

<a id="OutcomeType.ExtrusionStartScope"></a>

### OutcomeType.ExtrusionStartScope *= 14*

<a id="OutcomeType.FaceZoneScope"></a>

### OutcomeType.FaceZoneScope *= 18*

<a id="OutcomeType.FailureInfo"></a>

### OutcomeType.FailureInfo *= 10*

<a id="OutcomeType.InternalVolumeZoneScope"></a>

### OutcomeType.InternalVolumeZoneScope *= 20*

<a id="OutcomeType.Scope"></a>

### OutcomeType.Scope *= 4*

<a id="OutcomeType.SizeFieldName"></a>

### OutcomeType.SizeFieldName *= 5*

<a id="OutcomeType.VolumeZoneScope"></a>

### OutcomeType.VolumeZoneScope *= 19*


