docs/mechanical/mechanical-scripting-interface/versions/2025.R2.SP00/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/OutcomeType.md
# `OutcomeType`

<a id="ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OutcomeType"></a>

#### *class* Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OutcomeType(\*args, \*\*kwds)

Bases: [`enum.Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

This enum is referenced in the “Outcome” tree node and reflects the type of outcome being configured. Based on the type of an outcome different rules are applied which define the applicable list of outcome data to be used.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Attributes

| Name |
| ------------------------------------------------------------------------------------- |
| [`CSVProcessingInfo`](#OutcomeType.CSVProcessingInfo) |
| [`EnclosureExternalScope`](#OutcomeType.EnclosureExternalScope) |
| [`EnclosureInternalScope`](#OutcomeType.EnclosureInternalScope) |
| [`ExtrusionEndScope`](#OutcomeType.ExtrusionEndScope) |
| [`ExtrusionStartScope`](#OutcomeType.ExtrusionStartScope) |
| [`FaceZoneScope`](#OutcomeType.FaceZoneScope) |
| [`FailureInfo`](#OutcomeType.FailureInfo) |
| [`InternalVolumeZoneScope`](#OutcomeType.InternalVolumeZoneScope) |
| [`MultiZoneVolumeMesherDiagnostics`](#OutcomeType.MultiZoneVolumeMesherDiagnostics) |
| [`NonStackableBodies`](#OutcomeType.NonStackableBodies) |
| [`Scope`](#OutcomeType.Scope) |
| [`SizeFieldName`](#OutcomeType.SizeFieldName) |
| [`StackerBaseEdge`](#OutcomeType.StackerBaseEdge) |
| [`StackerBaseFace`](#OutcomeType.StackerBaseFace) |
| [`StackerDiagnostics`](#OutcomeType.StackerDiagnostics) |
| [`StackerSeedFace`](#OutcomeType.StackerSeedFace) |
| [`VolumeZoneScope`](#OutcomeType.VolumeZoneScope) |
| [`WarningInfo`](#OutcomeType.WarningInfo) |

<a id="attribute-detail"></a>

## Attribute detail

<a id="OutcomeType.CSVProcessingInfo"></a>

### OutcomeType.CSVProcessingInfo *= 27*

<a id="OutcomeType.EnclosureExternalScope"></a>

### OutcomeType.EnclosureExternalScope *= 14*

<a id="OutcomeType.EnclosureInternalScope"></a>

### OutcomeType.EnclosureInternalScope *= 13*

<a id="OutcomeType.ExtrusionEndScope"></a>

### OutcomeType.ExtrusionEndScope *= 16*

<a id="OutcomeType.ExtrusionStartScope"></a>

### OutcomeType.ExtrusionStartScope *= 15*

<a id="OutcomeType.FaceZoneScope"></a>

### OutcomeType.FaceZoneScope *= 19*

<a id="OutcomeType.FailureInfo"></a>

### OutcomeType.FailureInfo *= 11*

<a id="OutcomeType.InternalVolumeZoneScope"></a>

### OutcomeType.InternalVolumeZoneScope *= 21*

<a id="OutcomeType.MultiZoneVolumeMesherDiagnostics"></a>

### OutcomeType.MultiZoneVolumeMesherDiagnostics *= 41*

<a id="OutcomeType.NonStackableBodies"></a>

### OutcomeType.NonStackableBodies *= 25*

<a id="OutcomeType.Scope"></a>

### OutcomeType.Scope *= 4*

<a id="OutcomeType.SizeFieldName"></a>

### OutcomeType.SizeFieldName *= 5*

<a id="OutcomeType.StackerBaseEdge"></a>

### OutcomeType.StackerBaseEdge *= 23*

<a id="OutcomeType.StackerBaseFace"></a>

### OutcomeType.StackerBaseFace *= 22*

<a id="OutcomeType.StackerDiagnostics"></a>

### OutcomeType.StackerDiagnostics *= 29*

<a id="OutcomeType.StackerSeedFace"></a>

### OutcomeType.StackerSeedFace *= 24*

<a id="OutcomeType.VolumeZoneScope"></a>

### OutcomeType.VolumeZoneScope *= 20*

<a id="OutcomeType.WarningInfo"></a>

### OutcomeType.WarningInfo *= 26*


